--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   sendMessage:
     runs-on: ubuntu-latest
-    needs: [build-android, build-ios, build-linux, build-windows, build-macos]
+    #needs: [build-android, build-ios, build-linux, build-windows, build-macos]
     steps:
       - name: Cloning repository
         uses: actions/checkout@v4
