--- a/.github/workflows/idk.yml
+++ b/.github/workflows/idk.yml
@@ -35,21 +35,17 @@ jobs:
           echo "Commits since $LAST_SHA:"
           
           # Store commit logs in a file
-          git log $LAST_SHA..HEAD --pretty=format:"* [%H](https://github.com/$GITHUB_REPOSITORY/commit/%H) : %s" > commit_log.txt
-          
-          # Store commit logs in GitHub environment
-          {
-              echo "COMMIT_LOG<<EOF"
-              cat commit_log.txt
-              echo "EOF"
-          } >> "$GITHUB_ENV"
-          
-          # Extract branch name
-          BRANCH=${GITHUB_REF#refs/heads/}
+          COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"* [%H](https://github.com/${{ github.repository }}/commit/%H) : %s")
+          # Append the encoded commit logs to the COMMIT_LOG environment variable
+          echo "COMMIT_LOG=${COMMIT_LOG}" >> $GITHUB_ENV
+          # Debugging: Print the variable to check its content
+          echo "$COMMIT_LOG"
+          echo "$COMMIT_LOG" > commit_log.txt
+          # Extract branch name from github.ref
+          BRANCH=${{ github.ref }}
+          BRANCH=${BRANCH#refs/heads/}
           echo "BRANCH=${BRANCH}" >> $GITHUB_ENV
-          
-
-        shell: bash
+        shell: /usr/bin/bash -e {0}
         env:
           CI: true
         continue-on-error: true
@@ -60,105 +56,62 @@ jobs:
       - name: Send message to Discord
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_ALPHA }}
-        run: |
-            # Start with release header
-            echo "**🚀 New Release: Beta**" > header.txt
-            
-            # Extract all categories into separate files
-            echo "**🚀 Features**" > TFeatures.txt
-            echo "$(echo "$COMMIT_LOG" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sfeat' | head -n 5)" > feat.txt
-            
-            echo "**🐛 Fixes**" > TFixes.txt
-            echo "$(echo "$COMMIT_LOG" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(fix|bug|improvement|patch)' | head -n 5)" > fixes.txt
-            
-            echo "**🔧 Refactors**" > TRefactors.txt
-            echo "$(echo "$COMMIT_LOG" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\srefactor' | head -n 5)" > refactors.txt
-            
-            echo "**💅 Style**" > TStyle.txt
-            echo "$(echo "$COMMIT_LOG" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sstyle' | head -n 5)" > style.txt
-            
-            echo "**⚡ Performance**" > TPerformance.txt
-            echo "$(echo "$COMMIT_LOG" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sperf' | head -n 5)" > perf.txt
-            
-            echo "**🛠 Chores**" > TChores.txt
-            echo "$(echo "$COMMIT_LOG" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(chore|docs|build|ci)' | head -n 5)" > chores.txt
-            
-            default_color="#1ac4c5"
-            hex_to_decimal() { printf '%d' "0x${1#"#"}"; }
-            embed_color=$(hex_to_decimal "$default_color")
-            
-            # Ensure VERSION is not empty
-            VERSION=${VERSION:-"Beta"}
-            
-            # Create fields array based on content
-            fields_json="[]"
-            
-            # Only add fields that have content
-            if [ -s feat.txt ]; then
-              features=$(cat TFeatures.txt && echo -e "\n" && cat feat.txt)
-              fields_json=$(jq --arg name "Features" --arg value "$features" '. += [{"name": $name, "value": $value}]' <<< "$fields_json")
-            fi
-            
-            if [ -s fixes.txt ]; then
-              fixes=$(cat TFixes.txt && echo -e "\n" && cat fixes.txt)
-              fields_json=$(jq --arg name "Fixes" --arg value "$fixes" '. += [{"name": $name, "value": $value}]' <<< "$fields_json")
-            fi
-            
-            if [ -s refactors.txt ]; then
-              refactors=$(cat TRefactors.txt && echo -e "\n" && cat refactors.txt)
-              fields_json=$(jq --arg name "Refactors" --arg value "$refactors" '. += [{"name": $name, "value": $value}]' <<< "$fields_json")
-            fi
-            
-            if [ -s style.txt ]; then
-              style=$(cat TStyle.txt && echo -e "\n" && cat style.txt)
-              fields_json=$(jq --arg name "Style" --arg value "$style" '. += [{"name": $name, "value": $value}]' <<< "$fields_json")
-            fi
-            
-            if [ -s perf.txt ]; then
-              perf=$(cat TPerformance.txt && echo -e "\n" && cat perf.txt)
-              fields_json=$(jq --arg name "Performance" --arg value "$perf" '. += [{"name": $name, "value": $value}]' <<< "$fields_json")
-            fi
-            
-            if [ -s chores.txt ]; then
-              chores=$(cat TChores.txt && echo -e "\n" && cat chores.txt)
-              fields_json=$(jq --arg name "Chores" --arg value "$chores" '. += [{"name": $name, "value": $value}]' <<< "$fields_json")
-            fi
-            
-            # Add installation field
-            fields_json=$(jq --arg name "Installation" \
-                 --arg value "[❓Don't know which version to download? Click here!](https://github.com/$GITHUB_REPOSITORY/blob/main/INSTALLATION.md)" \
-                 '. += [{"name": $name, "value": $value}]' <<< "$fields_json")
-            
-            # Create the Discord payload with fields instead of description
-            discord_data=$(jq -n \
-              --arg role_mention "<@&1313089691523878942>" \
-              --arg title "🚀 New Release: Beta" \
-              --arg footer_text "Version $VERSION" \
-              --arg timestamp "$(date -u +%Y-%m-%dT%H:%M:%S.000Z)" \
-              --argjson embed_color "$embed_color" \
-              --argjson fields "$fields_json" \
-              '{
-                "content": $role_mention,
-                "embeds": [
-                  {
-                    "title": $title,
-                    "color": $embed_color,
-                    "fields": $fields,
-                    "footer": {
-                      "text": $footer_text
-                    },
-                    "timestamp": $timestamp
-                  }
-                ]
-              }')
-            
-            echo "Debug: Final Discord payload is: $discord_data"
-            
-            # Send the message to Discord using the webhook
-            curl -H "Content-Type: application/json" \
-                -X POST \
-                -d "$discord_data" \
-                "$DISCORD_WEBHOOK_URL"
+        run: |         
+          # Extract all categories into a file
+          echo "**🚀 Features**" > discord_commit.txt
+          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sfeat' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" >> discord_commit.txt
+          
+          echo "**🐛 Fixes**" >> discord_commit.txt
+          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(fix|bug|improvement|patch)' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" >> discord_commit.txt
+          
+          echo "**🔧 Refactors**" >> discord_commit.txt
+          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\srefactor' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" >> discord_commit.txt
+          
+          echo "**💅 Style**" >> discord_commit.txt
+          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sstyle' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" >> discord_commit.txt
+          
+          echo "**⚡ Performance**" >> discord_commit.txt
+          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\sperf' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" >> discord_commit.txt
+          
+          echo "**🛠 Chores**" >> discord_commit.txt
+          echo "$(echo "$COMMIT_LOGS" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(chore|docs|build|ci)' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" >> discord_commit.txt            
+
+          # Convert discord_commit.txt to JSON array
+          fields_json=$(jq -R -s '[split("\n") | .[] | select(. != "") | {name: ., value: "\u200B", inline: false}]' < discord_commit.txt)
+
+          # Define embed color (example: blue)
+          embed_color=3447003
+
+          # Create the Discord payload
+          discord_data=$(jq -n \
+            --arg role_mention "<@&1313089691523878942>" \
+            --arg title "🚀 New Release: Beta" \
+            --arg footer_text "Version beta" \
+            --arg timestamp "$(date -u +%Y-%m-%dT%H:%M:%S.000Z)" \
+            --argjson embed_color "$embed_color" \
+            --argjson fields "$fields_json" \
+            '{
+              "content": $role_mention,
+              "embeds": [
+                {
+                  "title": $title,
+                  "color": $embed_color,
+                  "fields": $fields,
+                  "footer": {
+                    "text": $footer_text
+                  },
+                  "timestamp": $timestamp
+                }
+              ]
+            }')
+          
+          echo "Debug: Final Discord payload is: $discord_data"
+
+          # Send the message to Discord using the webhook
+          curl -H "Content-Type: application/json" \
+              -X POST \
+              -d "$discord_data" \
+              "$DISCORD_WEBHOOK_URL"
 
       - name: Send message to Telegram
         env:
