--- a/.github/workflows/idk.yml
+++ b/.github/workflows/idk.yml
@@ -82,8 +82,8 @@ jobs:
           echo "**🛠 Chores**" >> discord_commit.txt
           echo "$(echo "$COMMIT_LOG" | grep -iE '^\*\s\[[a-f0-9]+\]\(.*\):\s(chore|docs|build|ci)' | sed -E 's/\): [^:]+:/) :/g' | head -n 5)" >> discord_commit.txt            
 
-          # Read commit logs from discord_commit.txt
-          commit_messages=$(cat discord_commit.txt)
+          # Read commit logs from discord_commit.txt and format for JSON
+          commit_messages=$(jq -R -s '.' < discord_commit.txt)
           
           # Construct Discord payload
           discord_data=$(jq -nc \
