--- a/.github/workflows/idk.yml
+++ b/.github/workflows/idk.yml
@@ -40,12 +40,11 @@ jobs:
           # Save commit logs to a file
           echo "$COMMIT_LOG" > commit_log.txt
           
-          # Append commit logs to GITHUB_ENV using safe EOF syntax
-          {
-            echo "COMMIT_LOG<<EOF"
-            echo "$COMMIT_LOG"
-            echo "EOF"
-          } >> "$GITHUB_ENV"
+          cat formatted_notes.txt
+          COMMIT_LOG=$(cat commit_log.txt) 
+          echo "COMMIT_LOG<<EOF" >> $GITHUB_ENV
+          echo "$COMMIT_LOG" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
           
           # Extract branch name from github.ref
           BRANCH=${{ github.ref }}
@@ -109,18 +108,23 @@ jobs:
             echo "$chores" >> formatted_notes.txt
             echo "" >> formatted_notes.txt
           fi
+
+          cat formatted_notes.txt
+          FORMATTED_NOTES=$(cat formatted_notes.txt) 
+          echo "FORMATTED_NOTES<<EOF" >> $GITHUB_ENV
+          echo "$FORMATTED_NOTES" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
           
-          # Read commit logs from formatted_notes.txt
-          commit_messages=$(cat formatted_notes.txt | sed ':a;N;$!ba;s/\n/\\n/g')
+          FORMATTED_NOTES=$(echo "$FORMATTED_NOTES" | sed -E 's/\): [^:]+:/) :/g')
           
           # Handle empty commit logs
-          if [[ -z "$commit_messages" ]]; then
-            commit_messages="No recent commits"
+          if [[ -z "$FORMATTED_NOTES" ]]; then
+            FORMATTED_NOTES="No recent commits"
           fi
           
           # Construct Discord payload
           discord_data=$(jq -nc \
-                            --arg field_value "$commit_messages" \
+                            --arg field_value "$FORMATTED_NOTES" \
                             --arg footer_text "Version beta" \
                             --arg timestamp "$(date -u +%Y-%m-%dT%H:%M:%S.000Z)" \
                             --arg embed_color "$embed_color" \
