--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -600,26 +600,34 @@ jobs:
           WINDOWS_EXE_LINK: ${{ needs.build-windows.outputs.windows_exe_link }}
           MACOS_LINK: ${{ needs.build-macos.outputs.macos_link }}
         run: |
-          MESSAGE="Beta Released
-      
-          🔹 [Download]($ANDROID_ARM64_LINK) | **Android (arm64)**
-          🔹 [Download]($ANDROID_ARMEABI_LINK) | **Android (armeabi-v7a)**
-          🔹 [Download]($ANDROID_UNIVERSAL_LINK) | **Android (universal)**
-          🔹 [Download]($ANDROID_X86_LINK) | **Android (x86 & x64)**
-          🔹 [Download]($WINDOWS_ZIP_LINK) | **Windows ZIP**
-          🔹 [Download]($WINDOWS_EXE_LINK) | **Windows EXE**
-          🔹 [Download]($LINUX_ZIP_LINK) | **Linux ZIP**
-          🔹 [Download]($LINUX_APPIMAGE_LINK) | **Linux AppImage**
-          🔹 [Download]($LINUX_RPM_LINK) | **Linux RPM**
-          🔹 [Download]($IOS_LINK) | **iOS**
-          🔹 [Download]($MACOS_LINK) | **macOS**"
-      
-          # Send to Discord if the message is not empty
-          if [[ -n "$MESSAGE" ]]; then
+            # Set GitHub environment variables for different platform messages
+            echo "apk_message=🔹 [Download]($ANDROID_ARM64_LINK) | **Android (arm64)**
+            🔹 [Download]($ANDROID_ARMEABI_LINK) | **Android (armeabi-v7a)**
+            🔹 [Download]($ANDROID_UNIVERSAL_LINK) | **Android (universal)**
+            🔹 [Download]($ANDROID_X86_LINK) | **Android (x86 & x64)**" >> $GITHUB_ENV
+            
+            echo "windows_message=🔹 [Download]($WINDOWS_ZIP_LINK) | **Windows ZIP**
+            🔹 [Download]($WINDOWS_EXE_LINK) | **Windows EXE**" >> $GITHUB_ENV
+            
+            echo "linux_message=🔹 [Download]($LINUX_ZIP_LINK) | **Linux ZIP**
+            🔹 [Download]($LINUX_APPIMAGE_LINK) | **Linux AppImage**
+            🔹 [Download]($LINUX_RPM_LINK) | **Linux RPM**" >> $GITHUB_ENV
+            
+            echo "ios_message=🔹 [Download]($IOS_LINK) | **iOS**" >> $GITHUB_ENV
+            
+            echo "macos_message=🔹 [Download]($MACOS_LINK) | **macOS**" >> $GITHUB_ENV
+            
+            # Load environment variables
+            source $GITHUB_ENV
+            
+            # Escape newlines for JSON
+            DISCORD_MESSAGE=$(jq -Rs '.' <<<"${apk_message}\n${windows_message}\n${linux_message}\n${ios_message}\n${macos_message}")
+            
+            # Send the Discord message
             curl -H "Content-Type: application/json" \
-                 -d "{\"content\": \"$MESSAGE\"}" \
-                 "${{ secrets.DISCORD_WEBHOOK_ALPHA }}"
-          fi
+                 -d "{\"content\": $DISCORD_MESSAGE}" \
+                 "${{ secrets.DISCORD_WEBHOOK_URL }}"
+
           
       - name: Send Telegram Notification
         env:
