--- a/.github/workflows/ik.yml
+++ b/.github/workflows/ik.yml
@@ -1,136 +1,86 @@
-name: Build (Beta) testing
+name: Test Platform Messaging
 
 on:
-  push:
-    branches:
-      - beta
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
-  sendMessage:
+  test-platform-messages:
     runs-on: ubuntu-latest
-    #needs: [build-android, build-ios, build-linux, build-windows, build-macos]
-    steps:
-      - name: Cloing repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Download last SHA artifact
-        uses: dawidd6/action-download-artifact@v6
-        with:
-          workflow: dart.yml
-          name: last-shaa
-        continue-on-error: true
-
-      - name: Get Commits Since Last Run
-        run: |
-          if [ -f last_sha.txt ]; then
-            LAST_SHA=$(cat last_sha.txt)
-          else
-            # Fallback to first commit if no previous SHA available
-            LAST_SHA=$(git rev-list --max-parents=0 HEAD)
-          fi
-          echo "Commits since $LAST_SHA:"
-          # Accumulate commit logs in a shell variable
-          COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"● %s ~%an [֍](https://github.com/${{ github.repository }}/commit/%H)" --max-count=10)
-          # URL-encode the newline characters for GitHub Actions
-          COMMIT_LOGS="${COMMIT_LOGS//'%'/'%25'}"
-          COMMIT_LOGS="${COMMIT_LOGS//$'\n'/'%0A'}"
-          COMMIT_LOGS="${COMMIT_LOGS//$'\r'/'%0D'}"
-          # Append the encoded commit logs to the COMMIT_LOG environment variable
-          echo "COMMIT_LOG=${COMMIT_LOGS}" >> $GITHUB_ENV
-          # Debugging: Print the variable to check its content
-          echo "$COMMIT_LOGS"
-          echo "$COMMIT_LOGS" > commit_log.txt
-          # Extract branch name from github.ref
-          BRANCH=${{ github.ref }}
-          BRANCH=${BRANCH#refs/heads/}
-          echo "BRANCH=${BRANCH}" >> $GITHUB_ENV
-        shell: /usr/bin/bash -e {0}
-        env:
-          CI: true
-        continue-on-error: true
-
-      - name: Save Current SHA for Next Run
-        run: echo ${{ github.sha }} > last_sha.txt
-
-      - name: Upload APK to Discord and Telegram
-        shell: bash
-        run: |
-          # Truncate field values
-          max_length=1024
-          commit_messages=$(echo "$COMMIT_LOG" | sed 's/%0A/\n/g; s/^/\n/')
-          if [ ${#commit_messages} -gt $max_length ]; then
-            commit_messages="${commit_messages:0:$max_length}"
-          fi
-          
-          # Set default values if variables are empty
-          : "${ping_variable:=<@&1313089691523878942>}"
-          : "${commit_messages:=No commits available.}"
-          : "${VERSION:=beta}"
-          : "${embed_color:=16711680}"  # Default red color
-          # Construct Discord payload
-          discord_data=$(jq -nc \
-                            --arg content "$ping_variable" \
-                            --arg field_value "$commit_messages" \
-                            --arg footer_text "Version $VERSION" \
-                            --arg timestamp "$(date -u +%Y-%m-%dT%H:%M:%S.000Z)" \
-                            --arg thumbnail_url "${thumbnail_url:-https://cdn.discordapp.com/icons/1303000390505336893/d5c4b7afadec08e4c03e89cf997b5f6a.png}" \
-                            --arg embed_color "$embed_color" \
-                            '{
-                              "content": $content,
-                              "embeds": [
-                                {
-                                  "title": "New Alpha-Build dropped 🔥",
-                                  "color": ($embed_color | tonumber),
-                                  "fields": [
-                                    {
-                                      "name": "Commits:",
-                                      "value": $field_value,
-                                      "inline": true
-                                    }
-                                  ],
-                                  "footer": {
-                                    "text": $footer_text
-                                  },
-                                  "timestamp": $timestamp,
-                                  "thumbnail": {
-                                    "url": $thumbnail_url
-                                  }
-                                }
-                              ],
-                              "attachments": []
-                            }')
-          echo "Debug: Final Discord payload is:"
-          echo "$discord_data"
-          # Send Discord message
-          curl -H "Content-Type: application/json" \
-              -d "$discord_data" \
-              ${{ secrets.DISCORD_WEBHOOK }}
-          # Format commit messages for Telegram
-          telegram_commit_messages=$(echo "$COMMIT_LOG" | sed 's/%0A/\n/g' | while read -r line; do
-              message=$(echo "$line" | sed -E 's/● (.*) ~(.*) \[֍\]\((.*)\)/● \1 ~\2 <a href="\3">֍<\/a>/')
-              message=$(echo "$message" | sed -E 's/\[#([0-9]+)\]\((https:\/\/github\.com\/[^)]+)\)/<a href="\2">#\1<\/a>/g')
-              echo "$message"
-          done)
-          telegram_commit_messages="<blockquote>${telegram_commit_messages}</blockquote>"
-          echo "$telegram_commit_messages"
-          # Upload APK to Telegram
-          response=$(curl -sS -f -X POST \
-              "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
-              -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" \
-              -d "message_thread_id=${{ secrets.TELEGRAM_THREAD_ID }}" \
-              -d "text=New Alpha-Build dropped 🔥
-              
-          Commits:
-          ${telegram_commit_messages}
-          Version: $VERSION" \
-              -d "parse_mode=HTML" \
-              -d "disable_web_page_preview=true")
     
-      - name: Upload Current SHA as Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: last-sha
-          path: last_sha.txt
+    steps:
+      - name: Set random test links
+        run: |
+          echo "ANDROID_ARM64_LINK=https://example.com/android-arm64-v1.0.0.apk" >> $GITHUB_ENV
+          echo "ANDROID_ARMEABI_LINK=https://example.com/android-armeabi-v7a-v1.0.0.apk" >> $GITHUB_ENV
+          echo "ANDROID_UNIVERSAL_LINK=https://example.com/android-universal-v1.0.0.apk" >> $GITHUB_ENV
+          echo "ANDROID_X86_LINK=https://example.com/android-x86-v1.0.0.apk" >> $GITHUB_ENV
+          echo "WINDOWS_ZIP_LINK=https://example.com/windows-v1.0.0.zip" >> $GITHUB_ENV
+          echo "WINDOWS_EXE_LINK=https://example.com/windows-v1.0.0.exe" >> $GITHUB_ENV
+          echo "LINUX_ZIP_LINK=https://example.com/linux-v1.0.0.zip" >> $GITHUB_ENV
+          echo "LINUX_APPIMAGE_LINK=https://example.com/linux-v1.0.0.AppImage" >> $GITHUB_ENV
+          echo "LINUX_RPM_LINK=https://example.com/linux-v1.0.0.rpm" >> $GITHUB_ENV
+          echo "IOS_LINK=https://example.com/ios-v1.0.0.ipa" >> $GITHUB_ENV
+          echo "MACOS_LINK=https://example.com/macos-v1.0.0.dmg" >> $GITHUB_ENV
+      
+      - name: Create platform messages
+        run: |
+          # Set GitHub environment variables for different platform messages
+          cat <<'EOF' >> $GITHUB_ENV
+          apk_message=🔹 [Download]($ANDROID_ARM64_LINK) | **Android (arm64)**
+          🔹 [Download]($ANDROID_ARMEABI_LINK) | **Android (armeabi-v7a)**
+          🔹 [Download]($ANDROID_UNIVERSAL_LINK) | **Android (universal)**
+          🔹 [Download]($ANDROID_X86_LINK) | **Android (x86 & x64)**
+          EOF
+
+          cat <<'EOF' >> $GITHUB_ENV
+          windows_message=🔹 [Download]($WINDOWS_ZIP_LINK) | **Windows ZIP**
+          🔹 [Download]($WINDOWS_EXE_LINK) | **Windows EXE**
+          EOF
+
+          cat <<'EOF' >> $GITHUB_ENV
+          linux_message=🔹 [Download]($LINUX_ZIP_LINK) | **Linux ZIP**
+          🔹 [Download]($LINUX_APPIMAGE_LINK) | **Linux AppImage**
+          🔹 [Download]($LINUX_RPM_LINK) | **Linux RPM**
+          EOF
+
+          cat <<'EOF' >> $GITHUB_ENV
+          ios_message=🔹 [Download]($IOS_LINK) | **iOS**
+          EOF
+
+          cat <<'EOF' >> $GITHUB_ENV
+          macos_message=🔹 [Download]($MACOS_LINK) | **macOS**
+          EOF
+      
+      - name: Print composed message (testing only)
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_ALPHA }}
+        run: |
+          # Source environment variables to make them available in this step
+          source $GITHUB_ENV
+          
+          # Create the complete message 
+          FULL_MESSAGE="${apk_message}
+          ${windows_message}
+          ${linux_message}
+          ${ios_message}
+          ${macos_message}"
+          
+          # Print for testing
+          echo "===== TEST MESSAGE ====="
+          echo "$FULL_MESSAGE"
+          echo "======================="
+          
+          # Only proceed with Discord if webhook is configured
+          if [ -n "$DISCORD_WEBHOOK_URL" ]; then
+            # Escape newlines for JSON
+            DISCORD_MESSAGE=$(jq -Rs '.' <<<"$FULL_MESSAGE")
+            
+            # Send the Discord message
+            curl -H "Content-Type: application/json" \
+              -d "{\"content\": $DISCORD_MESSAGE}" \
+              "$DISCORD_WEBHOOK_URL"
+            
+            echo "Message sent to Discord"
+          else
+            echo "Discord webhook not configured - skipping sending"
+          fi
